#541: Only set the JVM17 arguments in the wrapper files for Java 17+.